--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
             about and why you too should embrace the art of culinary crafting.
             <img width="500" src="foodie1.jpeg" alt="">
         </p>
+
+        <form>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value=""><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname" value=""><br><br>
+            <input type="submit" value="Submit">
+          </form>
+          <br>
+
         <table border="2" width="700px">
             <tr>
                 <th colspan="3" style="text-align: center;">Report Form</th>
