added table and ol

--- a/index.html
+++ b/index.html
@@ -88,7 +88,79 @@
             <li>To impress friends and family with your cooking skills</li>
             <li>To have fun in the kitchen! 😃</li>
         </ol>
+        <hr>
+        <ol type="A">
+            <li>To be able to use the essential culinary language</li>
+            <li>To hand-craft delicious meals instead of relying on pre-packaged options</li>
+            <li>To create culinary masterpieces</li>
+            <li>To impress friends and family with your cooking skills</li>
+            <li>To have fun in the kitchen! 😃</li>
+        </ol>
+        <hr>
+        <ol type="i">
+            <li>To be able to use the essential culinary language</li>
+            <li>To hand-craft delicious meals instead of relying on pre-packaged options</li>
+            <li>To create culinary masterpieces</li>
+            <li>To impress friends and family with your cooking skills</li>
+            <li>To have fun in the kitchen! 😃</li>
+        </ol>
+        <hr>
+        <ol type="a">
+            <li>To be able to use the essential culinary language</li>
+            <li>To hand-craft delicious meals instead of relying on pre-packaged options</li>
+            <li>To create culinary masterpieces</li>
+            <li>To impress friends and family with your cooking skills</li>
+            <li>To have fun in the kitchen! 😃</li>
+        </ol>
+        <hr>
+        <ol reversed>
+            <li>To be able to use the essential culinary language</li>
+            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
+            <li>To create culinary masterpieces</li>
+            <li>To impress friends and family with your cooking skills</li>
+            <li>To have fun in the kitchen! 😃</li>
+        </ol>
+        <hr>
+        <ol start="22">
+            <li>To be able to use the essential culinary language</li>
+            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
+            <li>To create culinary masterpieces</li>
+            <li>To impress friends and family with your cooking skills</li>
+            <li>To have fun in the kitchen! 😃</li>
+        </ol>
+        <hr>
+        <ul>
+            <li>To be able to use the essential culinary language</li>
+            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
+            <li>To create culinary masterpieces</li>
+            <li>To impress friends and family with your cooking skills</li>
+            <li>To have fun in the kitchen! 😃</li>
+        </ul>
+        <hr>
+        <ul type="circle">
+            <li>To be able to use the essential culinary language</li>
+            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
+            <li>To create culinary masterpieces</li>
+            <li>To impress friends and family with your cooking skills</li>
+            <li>To have fun in the kitchen! 😃</li>
+        </ul>
+        <hr>
+        <ul type="square">
+            <li>To be able to use the essential culinary language</li>
+            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
+            <li>To create culinary masterpieces</li>
+            <li>To impress friends and family with your cooking skills</li>
+            <li>To have fun in the kitchen! 😃</li>
+        </ul>
+        <hr>
+        <dl>
+            <dt>Term 1</dt>
+            <dd>Defination of term 1</dd>
+            <dt>Term 1</dt>
+            <dd>Defination of term 1</dd>
+        </dl>
         </p>
+        <hr>
         <p>
             Hopefully, you've gained some culinary insights here. Bon appétit until our next gastronomic
             journey!
