--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🍔 The Foodie Digest</title>
     <link rel="stylesheet" href="styles.css"
-    
 </head>
+<header>
+    <nav>
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Menus</a>
+        <a href="">Contact Us</a>
+    </nav>
+</header>
 
 <body>
     <h1 ="center">🍔 The Foodie Digest <h1></h1>
@@ -23,47 +30,6 @@
             <img width="500" src="foodie1.jpeg" alt="">
         </p>
 
-        <form>
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname" value=""><br>
-            <label for="lname">Last name:</label><br>
-            <input type="text" id="lname" name="lname" value=""><br><br>
-            <input type="submit" value="Submit">
-          </form>
-          <br>
-
-        <table border="2" width="700px">
-            <tr>
-                <th colspan="3" style="text-align: center;">Report Form</th>
-            </tr>
-            <tr>
-                <th>Subject</th>
-                <th>CAT1</th>
-                <th>Exam</th>
-            </tr>
-            <tr>
-                <td>English</td>
-                <td>19</td>
-                <td>40</td>
-            </tr>
-            <tr>
-                <td>Kiswahili</td>
-                <td>20</td>
-                <td>38</td>
-            </tr>
-            <tr>
-                <td>Maths</td>
-                <td>19</td>
-                <td>29</td>
-            </tr>
-            <tr>
-                <td>P.E</td>
-                <td>29</td>
-                <td>58</td>
-            </tr>
-        </table>
-
-
         <h2>What are Ingredients?</h2>
         <p>
             Ingredients are the building blocks of every dish. They are the elements that chefs use to
@@ -72,13 +38,18 @@
             spices, herbs, proteins, carbohydrates, and more. Culinary enthusiasts understand
             Ingredients and assemble them to create delightful dishes.
             In cooking, each ingredient plays a crucial role and is composed of three parts:
-            <li>The selection process</li>
-            <li>The preparation method</li>
-            <li>The actual ingredient</li>
-            You can learn more about ingredients at <a href="https://www.culinaryinstitute.com/">Culinary Institute of
-                tastes.</a>
+
+            <ul>
+                <li>The selection process</li>
+                <li>The preparation method</li>
+                <li>The actual ingredient</li>
+            </ul>
+
+            You can learn more about ingredients at
+             <a href="https://www.culinaryinstitute.com/">Culinary Institute of tastes.</a>
 
         </p>
+
         <h3>Why should you learn about Ingredients?</h3>
         <img width="500" src="foodie2.jpeg" alt="">
         <p>There are numerous reasons for mastering the fundamental language of the kitchen. Here
@@ -91,83 +62,34 @@
             <li>To have fun in the kitchen! 😃</li>
         </ol>
         <hr>
-        <ol type="A">
-            <li>To be able to use the essential culinary language</li>
-            <li>To hand-craft delicious meals instead of relying on pre-packaged options</li>
-            <li>To create culinary masterpieces</li>
-            <li>To impress friends and family with your cooking skills</li>
-            <li>To have fun in the kitchen! 😃</li>
-        </ol>
-        <hr>
-        <ol type="i">
-            <li>To be able to use the essential culinary language</li>
-            <li>To hand-craft delicious meals instead of relying on pre-packaged options</li>
-            <li>To create culinary masterpieces</li>
-            <li>To impress friends and family with your cooking skills</li>
-            <li>To have fun in the kitchen! 😃</li>
-        </ol>
-        <hr>
-        <ol type="a">
-            <li>To be able to use the essential culinary language</li>
-            <li>To hand-craft delicious meals instead of relying on pre-packaged options</li>
-            <li>To create culinary masterpieces</li>
-            <li>To impress friends and family with your cooking skills</li>
-            <li>To have fun in the kitchen! 😃</li>
-        </ol>
-        <hr>
-        <ol reversed>
-            <li>To be able to use the essential culinary language</li>
-            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
-            <li>To create culinary masterpieces</li>
-            <li>To impress friends and family with your cooking skills</li>
-            <li>To have fun in the kitchen! 😃</li>
-        </ol>
-        <hr>
-        <ol start="22">
-            <li>To be able to use the essential culinary language</li>
-            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
-            <li>To create culinary masterpieces</li>
-            <li>To impress friends and family with your cooking skills</li>
-            <li>To have fun in the kitchen! 😃</li>
-        </ol>
-        <hr>
-        <ul>
-            <li>To be able to use the essential culinary language</li>
-            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
-            <li>To create culinary masterpieces</li>
-            <li>To impress friends and family with your cooking skills</li>
-            <li>To have fun in the kitchen! 😃</li>
-        </ul>
-        <hr>
-        <ul type="circle">
-            <li>To be able to use the essential culinary language</li>
-            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
-            <li>To create culinary masterpieces</li>
-            <li>To impress friends and family with your cooking skills</li>
-            <li>To have fun in the kitchen! 😃</li>
-        </ul>
-        <hr>
-        <ul type="square">
-            <li>To be able to use the essential culinary language</li>
-            <li>To hand-craft delicious meals instead of relying on pre-packaged opons</li>
-            <li>To create culinary masterpieces</li>
-            <li>To impress friends and family with your cooking skills</li>
-            <li>To have fun in the kitchen! 😃</li>
-        </ul>
-        <hr>
-        <dl>
-            <dt>Term 1</dt>
-            <dd>Defination of term 1</dd>
-            <dt>Term 1</dt>
-            <dd>Defination of term 1</dd>
-        </dl>
-        </p>
-        <hr>
         <p>
             Hopefully, you've gained some culinary insights here. Bon appétit until our next gastronomic
             journey!
             
         </p>
+
+<aside>
+    <h4>Related Posts</h4>
+    <li>
+        <img src="img/Baked-Tortellini-1-scaled-e1708701729683.jpg" alt="" width="100" height="100">
+        <a href="http://">Baked Tortellini with sausage</a>
+        <p>By Chef Ali</p>
+    </li>
+    <li>
+        <img src="img/garlic-thyme.jpg" alt="" width="100" height="100">
+        <a href="http://">Garlic Thyme Mala-Marinated Mbuzi Dry Fry</a>
+        <p>By Ombachi</p>
+    </li>
+    <li>
+        <img src="img/linguine.jpg" alt="" width="100" height="100">
+        <a href="http://">Super Herby Creamy Mushroom Linguine</a>
+        <p>By Chef Wa Estlando</p>
+    </li>
+
+
+
+</aside>
+
 <footer>
     Footer >> Copyright &copy; 2027 by the foodie Digest
 </footer>
